gatekeeper/block-non-k8s-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedResources
metadata:
  name: block-non-k8s-resources
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["*"]
