gatekeeper/k8sRequiredLabels.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
# kubectl apply -f k8sRequiredLabels.yaml
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlabels

        violation[{"msg": msg}] {
          required := input.parameters.labels
          provided := input.review.object.metadata.labels
          missing := [label | label := required[_]; not has_label(provided, label)]
          count(missing) > 0
          msg := sprintf("Missing required labels: %v", [missing])
        }

        has_label(obj, label) = true {
          obj[label]
        }
